--- a/src/App.css
+++ b/src/App.css
@@ -29,14 +29,15 @@ button:hover {
 }
 
 .won {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   background: rgba(196, 188, 200, 0.8);
   position: relative;
   padding: 5px;
   z-index: 200;
-  position: absolute;
+  position: fixed;
   top: 0%;
+  left: 0%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -46,15 +47,23 @@ button:hover {
 .won p {
   position: absolute;
   top: 25%;
+  font-size: 100px;
+  font-weight:bolder;
+  color: #c23866;
+}
+
+.won h5 {
+  position: absolute;
+  top: 50%;
   font-size: 50px;
-  font-weight: 500;
+  font-weight:bolder;
   color: #c23866;
 }
 
 .won button {
   color: #c23866;
   cursor: pointer;
-  border: 2px solid #c23866;
+  border: 5px solid #c23866;
 }
 
 .won button:hover {
